--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
                 <li>Clarifying Project Nuances: To avoid misunderstandings between parties</li>
             </ul>
         </section>
+        <div class="superteam-member">
+            <a href="https://example.com" target="_blank">SUPERTEAM MEMBER</a>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
