--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </ul>
         </section>
         <div class="superteam-member">
-            <a href="https://example.com" target="_blank">SUPERTEAM MEMBER</a>
+            <a href="https://solscan.io/token/WfBu1JMCF4TndZwwEizAXTWw9ZiFuocTCdXpwNGmdFX" target="_blank">SUPERTEAM MEMBER</a>
         </div>
     </div>
     <script src="script.js"></script>
