--- a/index.html
+++ b/index.html
@@ -24,19 +24,19 @@
         <section class="projects">
             <h2>Highlighted Projects</h2>
             <div class="project">
-                <h3>PolizelCopias</h3>
+                <h3><a href="https://www.polizelequipamentos.com.br/">PolizelCopias</a></h3>
                 <p class="project-description">An integrated system of desktop apps and database management for monitoring stock output and real-time customer service to other companies.</p>
             </div>
             <div class="project">
-                <h3>CryptoVerso</h3>
+                <h3><a href="https://crypto-verso.vercel.app/">CryptoVerso</a></h3>
                 <p class="project-description">A web3 EVM project developed for direct integration between media applications (Discord/Telegram) and blockchain, enabling new usage possibilities between applications.</p>
             </div>
             <div class="project">
-                <h3>Seternia-Realms</h3>
+                <h3><a href="https://x.com/SeterniaRealms">Seternia-Realms</a></h3>
                 <p class="project-description">A project developed on SVM for building an interactive game universe with "only possible in Solana" features. Presented at BlockchainRio, it has been widely praised and is forming partnerships with major network players due to its innovative ideas and unique functionalities.</p>
             </div>
             <div class="project">
-                <h3>InjStaking</h3>
+                <h3><a href="https://x.com/injstaking">InjStaking</a></h3>
                 <p class="project-description">A project developed on CVM that allows users to stake NFTs to earn tokens, which are automatically distributed by the contract, fully customizable for new collections and rewards.</p>
             </div>
         </section>
